<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="texto_pregunta">¿La península de yucatán se encuentra al norte de México?</string>
    <string name="texto_boton_cierto">Cierto</string>
    <string name="texto_boton_falso">Falso</string>
    <string name="texto_boton_anterior">Anterior</string>
    <string name="texto_boton_siguiente">Siguiente</string>
    <string name="texto_respuesta_correcta">¡Correcto!</string>
    <string name="texto_respuesta_incorrecto">¡Incorrecto!</string>
</resources>
